--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "animate.css": "^4.1.1",
     "bulma": "^0.9.3",
+    "bulma-ribbon": "^0.1.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
