--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -24,23 +25,31 @@
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "cypress": "^8.3.1",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^6.0.1",
     "sass-loader": "^10.2.0",
+    "vue-eslint-parser": "^7.10.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
+    "parser": "vue-eslint-parser",
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "plugins": [
+      "vue"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:vue/essential",
+      "plugin:prettier/recommended"
+    ],
     "root": true,
     "env": {
       "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
     },
     "rules": {}
   },
